Update retention stuff

--- a/opt/config33.ipynb
+++ b/opt/config33.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,180 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>addr</th>\n",
+       "      <th>t</th>\n",
+       "      <th>vwl</th>\n",
+       "      <th>vbl</th>\n",
+       "      <th>pw</th>\n",
+       "      <th>gi</th>\n",
+       "      <th>gf</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>46141</td>\n",
+       "      <td>1.698431e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>11735</td>\n",
+       "      <td>1.698431e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41965</td>\n",
+       "      <td>1.698431e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>24212</td>\n",
+       "      <td>1.698431e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>63363</td>\n",
+       "      <td>1.698431e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65531</th>\n",
+       "      <td>23238</td>\n",
+       "      <td>1.698433e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>63</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65532</th>\n",
+       "      <td>31020</td>\n",
+       "      <td>1.698433e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65533</th>\n",
+       "      <td>55327</td>\n",
+       "      <td>1.698433e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>29</td>\n",
+       "      <td>1</td>\n",
+       "      <td>6</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65534</th>\n",
+       "      <td>57247</td>\n",
+       "      <td>1.698433e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65535</th>\n",
+       "      <td>44804</td>\n",
+       "      <td>1.698433e+09</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>1</td>\n",
+       "      <td>10</td>\n",
+       "      <td>64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2424829 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        addr             t  vwl  vbl  pw  gi  gf\n",
+       "0      46141  1.698431e+09    0    0   1   8   8\n",
+       "1      11735  1.698431e+09    0    1   1   7   7\n",
+       "2      41965  1.698431e+09    0    2   1   9   9\n",
+       "3      24212  1.698431e+09    0    3   1   7   7\n",
+       "4      63363  1.698431e+09    0    4   1   8   9\n",
+       "...      ...           ...  ...  ...  ..  ..  ..\n",
+       "65531  23238  1.698433e+09    0   27   1  10  63\n",
+       "65532  31020  1.698433e+09    0   28   1   7  64\n",
+       "65533  55327  1.698433e+09    0   29   1   6  64\n",
+       "65534  57247  1.698433e+09    0   30   1  10  64\n",
+       "65535  44804  1.698433e+09    0   31   1  10  64\n",
+       "\n",
+       "[2424829 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# SET sweep data\n",
-    "setdata = pd.read_csv(f\"../data/sweep/setsweep33.csv\", delimiter=\"\\t\", names=[\"addr\", \"t\", \"vwl\", \"vbl\", \"pw\"] + [f\"gi[{i}]\" for i in range(48)] + [f\"gf[{i}]\" for i in range(48)])\n",
+    "setdata = pd.read_csv(f\"../data/sweep/setsweep33.csv.gz\", delimiter=\"\\t\", names=[\"addr\", \"t\", \"vwl\", \"vbl\", \"pw\"] + [f\"gi[{i}]\" for i in range(48)] + [f\"gf[{i}]\" for i in range(48)])\n",
     "setdata = pd.concat([setdata[[\"addr\",\"t\",\"vwl\",\"vbl\",\"pw\",f\"gi[{i}]\",f\"gf[{i}]\"]].rename(columns={f\"gi[{i}]\" : \"gi\", f\"gf[{i}]\" : \"gf\"}) for i in range(48)])\n",
     "setdata = setdata[setdata[\"gf\"] != 0]\n",
     "setdata"
@@ -41,9 +209,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No artists with labels found to put in legend.  Note that artists whose label start with an underscore are ignored when legend() is called with no argument.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tailstart, avgopt, tailstop = 3 13 26\n"
+     ]
+    }
+   ],
    "source": [
     "# FIRST-ORDER OPTIMIZATION\n",
     "p = 0.999\n",
@@ -68,23 +251,23 @@
     "      plt.figure(figsize=(5,4))\n",
     "      plt.scatter(d['vbl'], d['gf'], marker='.', alpha=0.002)\n",
     "      plt.plot(d.groupby('vbl').quantile(p), label=f\"Max final $g$ ({p*100}$^{{th}}$ perc.)\")\n",
-    "      plt.plot(d.groupby('vbl').mean(), label=f\"Avg final $g$ ({p*100}$^{{th}}$ perc.)\")\n",
+    "      # plt.plot(d.groupby('vbl').mean(), label=f\"Avg final $g$ ({p*100}$^{{th}}$ perc.)\")\n",
     "      # plt.plot(d.groupby('vbl').quantile(1-p), label=\"Min final $g$\")\n",
-    "      plt.axhline(write_between[0], color='r')\n",
-    "      plt.axhline((write_between[1] + write_between[0])/2, color='r', linestyle='--')\n",
-    "      plt.axhline(write_between[1], color='r')\n",
+    "      # plt.axhline(write_between[0], color='r')\n",
+    "      # plt.axhline((write_between[1] + write_between[0])/2, color='r', linestyle='--')\n",
+    "      # plt.axhline(write_between[1], color='r')\n",
     "      \n",
     "      # Get tail-start, avg-opt, tail-stop\n",
     "      tailstart = intersection(np.array([0,31]),np.array([write_between[1], write_between[1]]), d.groupby('vbl').quantile(p).reset_index()['vbl'], d.groupby('vbl').quantile(p).reset_index()['gf'])\n",
     "      avgopt = intersection(np.array([0,31]),np.array([(write_between[1] + write_between[0])/2, (write_between[1] + write_between[0])/2]), d.groupby('vbl').mean().reset_index()['vbl'], d.groupby('vbl').mean().reset_index()['gf'])\n",
     "      tailstop = intersection(np.array([0,31]),np.array([write_between[0], write_between[0]]), d.groupby('vbl').quantile(1-p).reset_index()['vbl'], d.groupby('vbl').quantile(1-p).reset_index()['gf'])\n",
-    "      plt.axvline(tailstart[0][-1], color='purple', linestyle='--', label=\"Tail-optimized $V_{BL}$\")\n",
-    "      plt.axvline(avgopt[0][-1], color='tan', linestyle='--', label=\"Mean-optimized $V_{BL}$\")\n",
+    "      # plt.axvline(tailstart[0][-1], color='purple', linestyle='--', label=\"Tail-optimized $V_{BL}$\")\n",
+    "      # plt.axvline(avgopt[0][-1], color='tan', linestyle='--', label=\"Mean-optimized $V_{BL}$\")\n",
     "      # plt.axvline(tailstop[0][-1], color='pink', linestyle='--', label=\"Tail-optimized $V_{bl}$ stop\")\n",
-    "      plt.plot(tailstart[0][-1], tailstart[1][-1], '*', color='purple', markersize=12)\n",
-    "      plt.plot(avgopt[0][-1], avgopt[1][-1], '*', color='tan', markersize=12)\n",
+    "      # plt.plot(tailstart[0][-1], tailstart[1][-1], '*', color='purple', markersize=12)\n",
+    "      # plt.plot(avgopt[0][-1], avgopt[1][-1], '*', color='tan', markersize=12)\n",
     "      # plt.plot(tailstop[0][-1], tailstop[1][-1], '*', color='pink', markersize=12)\n",
-    "      tailstart, avgopt= int(np.round(tailstart[0][0])), int(np.round(avgopt[0][0]))\n",
+    "      tailstart, avgopt= int(np.floor(tailstart[0][0])), int(np.round(avgopt[0][0]))\n",
     "      try:\n",
     "        tailstop = int(np.round(tailstop[0][0]))\n",
     "      except IndexError:\n",
@@ -92,33 +275,33 @@
     "      print(\"tailstart, avgopt, tailstop =\", tailstart, avgopt, tailstop)\n",
     "\n",
     "      # Final plot stuff\n",
-    "      plt.title(f\"SET Sweep ($V_{{DDLS}}$ = 3.3V, $V_{{WL}}$ DAC = 0, $t_{{pw}}$ = {pw*10}ns)\", y=1)\n",
+    "      plt.title(f\"SET Sweep ($V_{{DDLS}}$ = 3.3V, min $V_{{WL}}$, $t_{{pw}}$ = {pw*10}ns)\", y=1)\n",
     "      plt.xlabel(\"BL DAC Level\")\n",
     "      plt.ylabel(\"Final ADC Level\")\n",
     "      plt.ylim(-1, 65)\n",
-    "      plt.legend(fontsize=9)\n",
+    "      plt.legend(fontsize=9, loc=\"lower right\")\n",
     "      plt.tight_layout()\n",
     "      plt.savefig(f\"../analysis/figs/{bpc}bpc_lvl{i}_sweep_opt.pdf\")\n",
     "      plt.show()\n",
     "\n",
-    "      # Generate configurations\n",
-    "      stop = 31\n",
-    "      j = 0 # experiment number\n",
-    "      for pw in range(1, 2):\n",
-    "        for start in range(tailstart, avgopt + 1):\n",
-    "          for step in sorted(list(factors(stop - start)))[:4]:\n",
-    "            # Copy config template from form.json\n",
-    "            config = deepcopy(bpc_config)\n",
+    "      # # Generate configurations\n",
+    "      # stop = 31\n",
+    "      # j = 0 # experiment number\n",
+    "      # for pw in range(1, 2):\n",
+    "      #   for start in range(tailstart, avgopt + 1):\n",
+    "      #     for step in sorted(list(factors(stop - start)))[:4]:\n",
+    "      #       # Copy config template from form.json\n",
+    "      #       config = deepcopy(bpc_config)\n",
     "\n",
-    "            # Update level settings\n",
-    "            config[\"level_settings\"][i].update({\"pw_set_start\": pw, \"pw_set_stop\": pw + 1, \"bl_dac_set_lvl_start\": start, \"bl_dac_set_lvl_stop\": stop, \"bl_dac_set_lvl_step\": step})\n",
+    "      #       # Update level settings\n",
+    "      #       config[\"level_settings\"][i].update({\"pw_set_start\": pw, \"pw_set_stop\": pw + 1, \"bl_dac_set_lvl_start\": start, \"bl_dac_set_lvl_stop\": stop, \"bl_dac_set_lvl_step\": step})\n",
     "\n",
-    "            # Write out experiments as configs\n",
-    "            with open(f\"configs/config_{bpc}bpc_lvl{i}_{str(j).zfill(4)}.json\", 'w') as outf:\n",
-    "              json.dump(config, outf, indent=1)\n",
+    "      #       # Write out experiments as configs\n",
+    "      #       with open(f\"configs/config_{bpc}bpc_lvl{i}_{str(j).zfill(4)}.json\", 'w') as outf:\n",
+    "      #         json.dump(config, outf, indent=1)\n",
     "\n",
-    "            # Increment j\n",
-    "            j += 1\n"
+    "      #       # Increment j\n",
+    "      #       j += 1\n"
    ]
   }
  ],
