Clean up and do allocation

--- a/analysis/characterizations.ipynb
+++ b/analysis/characterizations.ipynb
@@ -24,8 +24,7 @@
     "import json\n",
     "\n",
     "# Import custom libraries\n",
-    "import ppf\n",
-    "from ppf import PPFScale\n",
+    "import helper\n",
     "\n",
     "# Import external libraries\n",
     "import matplotlib.pyplot as plt\n",
