--- a/analysis/process_read_retention.ipynb
+++ b/analysis/process_read_retention.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,310 +32,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1892393/1993367061.py:4: DtypeWarning: Columns (2,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_1961898/2722252672.py:4: DtypeWarning: Columns (2,14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data = pd.read_csv(filename, delimiter='\\t', names=names)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>addr</th>\n",
-       "      <th>time</th>\n",
-       "      <th>lower</th>\n",
-       "      <th>upper</th>\n",
-       "      <th>width</th>\n",
-       "      <th>successes</th>\n",
-       "      <th>failures</th>\n",
-       "      <th>reads</th>\n",
-       "      <th>sets</th>\n",
-       "      <th>resets</th>\n",
-       "      <th>cycles</th>\n",
-       "      <th>read_bits</th>\n",
-       "      <th>set_bits</th>\n",
-       "      <th>reset_bits</th>\n",
-       "      <th>lvl</th>\n",
-       "      <th>i</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>107.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>7</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>107.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>64</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>107.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>14</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>107.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>11</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>107.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>49</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5734074</th>\n",
-       "      <td>53923</td>\n",
-       "      <td>1735.542357</td>\n",
-       "      <td>30</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>107.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>44</td>\n",
-       "      <td>42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5734076</th>\n",
-       "      <td>53923</td>\n",
-       "      <td>1735.542357</td>\n",
-       "      <td>30</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>107.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5734077</th>\n",
-       "      <td>53923</td>\n",
-       "      <td>1735.542357</td>\n",
-       "      <td>30</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>107.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5734078</th>\n",
-       "      <td>53923</td>\n",
-       "      <td>1735.542357</td>\n",
-       "      <td>30</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>107.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5734079</th>\n",
-       "      <td>53923</td>\n",
-       "      <td>1735.542357</td>\n",
-       "      <td>30</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>107.0</td>\n",
-       "      <td>148.0</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>44</td>\n",
-       "      <td>47</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>4420020 rows × 16 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "          addr         time  lower  upper  width  successes  failures  reads  \\\n",
-       "0            0     0.000000      0    1.0    1.0        1.0       0.0   10.0   \n",
-       "1            0     0.000000      0    1.0    1.0        1.0       0.0   10.0   \n",
-       "3            0     0.000000      0    1.0    1.0        1.0       0.0   10.0   \n",
-       "4            0     0.000000      0    1.0    1.0        1.0       0.0   10.0   \n",
-       "5            0     0.000000      0    1.0    1.0        1.0       0.0   10.0   \n",
-       "...        ...          ...    ...    ...    ...        ...       ...    ...   \n",
-       "5734074  53923  1735.542357     30   57.0   27.0        1.0       0.0   10.0   \n",
-       "5734076  53923  1735.542357     30   57.0   27.0        1.0       0.0   10.0   \n",
-       "5734077  53923  1735.542357     30   57.0   27.0        1.0       0.0   10.0   \n",
-       "5734078  53923  1735.542357     30   57.0   27.0        1.0       0.0   10.0   \n",
-       "5734079  53923  1735.542357     30   57.0   27.0        1.0       0.0   10.0   \n",
-       "\n",
-       "         sets  resets  cycles  read_bits  set_bits  reset_bits  lvl   i  \n",
-       "0         1.0     0.0   107.0      148.0      37.0         0.0    7   0  \n",
-       "1         1.0     0.0   107.0      148.0      37.0         0.0   64   1  \n",
-       "3         1.0     0.0   107.0      148.0      37.0         0.0   14   3  \n",
-       "4         1.0     0.0   107.0      148.0      37.0         0.0   11   4  \n",
-       "5         1.0     0.0   107.0      148.0      37.0         0.0   49   5  \n",
-       "...       ...     ...     ...        ...       ...         ...  ...  ..  \n",
-       "5734074   1.0     0.0   107.0      148.0      37.0         0.0   44  42  \n",
-       "5734076   1.0     0.0   107.0      148.0      37.0         0.0   45  44  \n",
-       "5734077   1.0     0.0   107.0      148.0      37.0         0.0   45  45  \n",
-       "5734078   1.0     0.0   107.0      148.0      37.0         0.0   45  46  \n",
-       "5734079   1.0     0.0   107.0      148.0      37.0         0.0   44  47  \n",
-       "\n",
-       "[4420020 rows x 16 columns]"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Get retention data\n",
     "names = [\"addr\", \"time\", \"lower\", \"upper\", \"width\", \"successes\", \"failures\", \"reads\", \"sets\", \"resets\", \"cycles\", \"read_bits\", \"set_bits\", \"reset_bits\", \"lvl\"]\n",
-    "filename = \"../data/retention/retention2.csv\"\n",
+    "filename = \"../data/retention/retention3.csv.gz\"\n",
     "data = pd.read_csv(filename, delimiter='\\t', names=names)\n",
     "data.loc[pd.isna(data[\"lvl\"]), \"lvl\"] = data[pd.isna(data[\"lvl\"])][\"lower\"]\n",
     "data[\"lvl\"] = data[\"lvl\"].str.strip('[]').str.split(', ')\n",
@@ -357,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +396,7 @@
     "tdata = pd.concat(tdata)\n",
     "minfilename = filename.split(\".\")\n",
     "minfilename.insert(-1, \"min\")\n",
-    "minfilename.append(\"gz\")\n",
+    "# minfilename.append(\"gz\")\n",
     "minfilename = \".\".join(minfilename) \n",
     "tdata.to_csv(minfilename)\n",
     "tdata"
