--- a/analysis/allocation.ipynb
+++ b/analysis/allocation.ipynb
@@ -43070,7 +43070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43085,14 +43085,16 @@
     "        config = deepcopy(config_tmpl)\n",
     "        config[\"num_levels\"] = len(d[\"allocation\"])\n",
     "        config[\"level_settings\"] = config[\"level_settings\"][:config[\"num_levels\"]]\n",
-    "        if d[\"bpc\"] == 1:\n",
-    "            config[\"post_read_setup_cycles\"] = 8\n",
-    "        if d[\"bpc\"] == 2:\n",
-    "            config[\"post_read_setup_cycles\"] = 16\n",
     "        config[\"write_to_init_read_setup_cycles\"] = 0\n",
     "        config[\"read_to_init_write_setup_cycles\"] = 4\n",
     "        config[\"idle_to_init_read_setup_cycles\"] = 63\n",
     "        for lvl, ((lower_write, upper_write), read_bound) in enumerate(zip(d[\"allocation\"], d[\"read_bounds\"][1:])):\n",
+    "            if d[\"bpc\"] == 1:\n",
+    "                config[\"post_read_setup_cycles\"] = 8\n",
+    "                config[\"level_settings\"][lvl][\"pw_rst_start_mantissa\"] = 4\n",
+    "                config[\"level_settings\"][lvl][\"pw_rst_stop_mantissa\"] = 5\n",
+    "            if d[\"bpc\"] == 2:\n",
+    "                config[\"post_read_setup_cycles\"] = 16\n",
     "            config[\"level_settings\"][lvl][\"adc_lower_write_ref_lvl\"] = lower_write\n",
     "            config[\"level_settings\"][lvl][\"adc_upper_write_ref_lvl\"] = upper_write\n",
     "            config[\"level_settings\"][lvl][\"adc_upper_read_ref_lvl\"] = min(read_bound, 63)\n",
