--- a/analysis/allocation.ipynb
+++ b/analysis/allocation.ipynb
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -719,14 +719,15 @@
     "        config = deepcopy(config_tmpl)\n",
     "        config[\"num_levels\"] = len(d[\"allocation\"])\n",
     "        config[\"level_settings\"] = config[\"level_settings\"][:config[\"num_levels\"]]\n",
-    "        config[\"write_to_init_read_setup_cycles\"] = 6\n",
-    "        config[\"read_to_init_write_setup_cycles\"] = 6\n",
+    "        config[\"write_to_init_read_setup_cycles\"] = 2 if d[\"bpc\"] == 1 else 6 \n",
+    "        config[\"read_to_init_write_setup_cycles\"] = 2 if d[\"bpc\"] == 1 else 6\n",
     "        config[\"idle_to_init_read_setup_cycles\"] = 63\n",
     "        config[\"post_read_setup_cycles\"] = 2 if d[\"bpc\"] == 1 else 16\n",
     "        for lvl, ((lower_write, upper_write), read_bound) in enumerate(zip(d[\"allocation\"], d[\"read_bounds\"][1:])):\n",
     "            config[\"level_settings\"][lvl][\"adc_lower_write_ref_lvl\"] = lower_write\n",
     "            config[\"level_settings\"][lvl][\"adc_upper_write_ref_lvl\"] = upper_write\n",
     "            config[\"level_settings\"][lvl][\"adc_upper_read_ref_lvl\"] = min(read_bound, 63)\n",
+    "        config[\"level_settings\"][-1][\"bl_dac_set_lvl_start\"] = 16\n",
     "        json.dump(config, config_outfile, indent=4)"
    ]
   }
