Pareto curves need to be pngs to render properly

--- a/analysis/allocation.ipynb
+++ b/analysis/allocation.ipynb
@@ -8458,7 +8458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -8637,7 +8637,7 @@
        "[16657 rows x 7 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8651,7 +8651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -9028,7 +9028,7 @@
        "15450  5.797820e+06  0.002907  0.005814   False  0.997093  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9073,7 +9073,7 @@
     "    plt.ylabel(\"Expected Write Bandwidth (Mbps)\")\n",
     "    plt.legend(fontsize=10.5, loc=\"best\" if bpc == 2 else \"right\")\n",
     "    plt.tight_layout()\n",
-    "    plt.savefig(f\"figs/{bpc}bpc_pareto.pdf\")\n",
+    "    plt.savefig(f\"figs/{bpc}bpc_pareto.png\", dpi=300, bbox_inches=\"tight\")\n",
     "    plt.show()\n",
     "best = pd.concat(best).drop_duplicates(subset=[\"allocation\"])\n",
     "best"
